--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Keyboard</title>
+    <title>Snake Ladder Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <!-- icons cdn -->
@@ -31,6 +31,7 @@
 
 <body>
     <audio src="./media/audio/success sound.mp3" id="audio" preload="auto"></audio>
+    <h1 class="center"><i class="bi bi-dice-6-fill icon"></i> Snake Ladder Game</h1>
     <div class="maincontainer">
         <!-- dice -->
         <div class="dice">
@@ -179,8 +180,8 @@
         </div>
     </div>
 
-    <p class="center">Thanks For Visiting</p>
-    <p class="center">Regards! Muhammad Ahad&copy;</p>
+    <!-- <p class="center">Thanks For Visiting</p>
+    <p class="center">Regards! Muhammad Ahad&copy;</p> -->
 </body>
 
 </html>
