--- a/index.html
+++ b/index.html
@@ -27,30 +27,36 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> -->
 
     <script src="main.js"></script>
-
 </head>
 
 <body>
     <audio src="./media/audio/success sound.mp3" id="audio" preload="auto"></audio>
-    <h1 class="message"><i class="bi bi-dice-6-fill icon"></i> Snake Ladder Game</h1>
-    <h1 class="message-mobile"><i class="bi bi-dice-6-fill icon"></i> Saanp Seedhi</h1>
+    <h1 class="message">
+        <i class="bi bi-dice-6-fill icon"></i> Snake Ladder Game
+    </h1>
+    <h1 class="message-mobile">
+        <i class="bi bi-dice-6-fill icon"></i> Saanp Seedhi
+    </h1>
     <div class="maincontainer">
         <!-- dice -->
         <div class="dice">
             <div class="dice-1">
                 <p type="text" id="dice-1"></p>
-                <button class="button-1" type="button" onclick="dice1(); audio()">Roll Dice</button>
+                <button class="button-1" type="button" onclick="dice1(); audio()">
+            Roll Dice
+          </button>
                 <p>Player Grey</p>
             </div>
             <div class="dice-2">
                 <p type="text" id="dice-2"></p>
-                <button class="button-2" type="button" onclick="dice2(); audio()">Roll Dice</button>
+                <button class="button-2" type="button" onclick="dice2(); audio()">
+            Roll Dice
+          </button>
                 <p>Player Black</p>
             </div>
         </div>
         <div class="subcontainer">
             <div class="container">
-
                 <!-- first player path -->
 
                 <!-- row 1 -->
@@ -183,10 +189,8 @@
                     <p class="box" id="9">9</p>
                     <p class="box" id="10">10</p>
                 </row>
-
             </div>
             <div class="container-2">
-
                 <!-- row 1 -->
                 <row>
                     <p class="box" id="200">100</p>
@@ -317,13 +321,11 @@
                     <p class="box" id="109">9</p>
                     <p class="box" id="110">10</p>
                 </row>
-
             </div>
         </div>
     </div>
 
-    <!-- <p class="center">Thanks For Visiting</p>
-    <p class="center">Regards! Muhammad Ahad&copy;</p> -->
+    <p class="center">Thanks For Visiting Regards! Muhammad Ahad&copy;</p>
 </body>
 
 </html>
