snake ladder hint remaining

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                 <!-- row 1 -->
                 <row>
                     <p class="box" id="100">100</p>
-                    <p class="box" id="99">99</p>
+                    <p class="box box-red" id="99">99</p>
                     <p class="box" id="98">98</p>
-                    <p class="box" id="97">97</p>
+                    <p class="box" id="97">97<i>73 Ladder</i></p>
                     <p class="box" id="96">96</p>
-                    <p class="box" id="95">95</p>
-                    <p class="box" id="94">94</p>
+                    <p class="box" id="95">95<i>88 Ladder</i></p>
+                    <p class="box" id="94">94<i>55 Ladder</i></p>
                     <p class="box" id="93">93</p>
                     <p class="box" id="92">92</p>
                     <p class="box" id="91">91</p>
@@ -77,11 +77,11 @@
                     <p class="box" id="81">81</p>
                     <p class="box" id="82">82</p>
                     <p class="box" id="83">83</p>
-                    <p class="box" id="84">84</p>
+                    <p class="box box-red" id="84">84</p>
                     <p class="box" id="85">85</p>
                     <p class="box" id="86">86</p>
                     <p class="box" id="87">87</p>
-                    <p class="box" id="88">88</p>
+                    <p class="box box-green" id="88">88</p>
                     <p class="box" id="89">89</p>
                     <p class="box" id="90">90</p>
                 </row>
@@ -94,7 +94,7 @@
                     <p class="box" id="76">76</p>
                     <p class="box" id="75">75</p>
                     <p class="box" id="74">74</p>
-                    <p class="box" id="73">73</p>
+                    <p class="box box-green" id="73">73</p>
                     <p class="box" id="72">72</p>
                     <p class="box" id="71">71</p>
                 </row>
@@ -104,12 +104,12 @@
                     <p class="box" id="62">62</p>
                     <p class="box" id="63">63</p>
                     <p class="box" id="64">64</p>
-                    <p class="box" id="65">65</p>
+                    <p class="box box-red" id="65">65</p>
                     <p class="box" id="66">66</p>
                     <p class="box" id="67">67</p>
                     <p class="box" id="68">68</p>
                     <p class="box" id="69">69</p>
-                    <p class="box" id="70">70</p>
+                    <p class="box" id="70">70<i>84 Snake</i></p>
                 </row>
                 <!-- row 5 -->
                 <row>
@@ -118,7 +118,7 @@
                     <p class="box" id="58">58</p>
                     <p class="box" id="57">57</p>
                     <p class="box" id="56">56</p>
-                    <p class="box" id="55">55</p>
+                    <p class="box box-green" id="55">55</p>
                     <p class="box" id="54">54</p>
                     <p class="box" id="53">53</p>
                     <p class="box" id="52">52</p>
@@ -130,10 +130,10 @@
                     <p class="box" id="42">42</p>
                     <p class="box" id="43">43</p>
                     <p class="box" id="44">44</p>
-                    <p class="box" id="45">45</p>
+                    <p class="box" id="45">45<i>65 Snake</i></p>
                     <p class="box" id="46">46</p>
-                    <p class="box" id="47">47</p>
-                    <p class="box" id="48">48</p>
+                    <p class="box box-red" id="47">47</p>
+                    <p class="box" id="48">48<i>29 Ladder</i></p>
                     <p class="box" id="49">49</p>
                     <p class="box" id="50">50</p>
                 </row>
@@ -146,28 +146,28 @@
                     <p class="box" id="36">36</p>
                     <p class="box" id="35">35</p>
                     <p class="box" id="34">34</p>
-                    <p class="box" id="33">33</p>
+                    <p class="box" id="33">33<i>2 Ladder</i></p>
                     <p class="box" id="32">32</p>
                     <p class="box" id="31">31</p>
                 </row>
                 <!-- row 8 -->
                 <row>
                     <p class="box" id="21">21</p>
-                    <p class="box" id="22">22</p>
+                    <p class="box box-red" id="22">22</p>
                     <p class="box" id="23">23</p>
                     <p class="box" id="24">24</p>
                     <p class="box" id="25">25</p>
                     <p class="box" id="26">26</p>
                     <p class="box" id="27">27</p>
-                    <p class="box" id="28">28</p>
-                    <p class="box" id="29">29</p>
+                    <p class="box" id="28">28<i>47 Snake</i></p>
+                    <p class="box box-green" id="29">29</p>
                     <p class="box" id="30">30</p>
                 </row>
                 <!-- row 9 -->
                 <row>
                     <p class="box" id="20">20</p>
                     <p class="box" id="19">19</p>
-                    <p class="box" id="18">18</p>
+                    <p class="box" id="18">18<i>99 Snake</i></p>
                     <p class="box" id="17">17</p>
                     <p class="box" id="16">16</p>
                     <p class="box" id="15">15</p>
@@ -179,8 +179,8 @@
                 <!-- row 10 -->
                 <row>
                     <p class="box" id="1">1</p>
-                    <p class="box" id="2">2</p>
-                    <p class="box" id="3">3</p>
+                    <p class="box box-green" id="2">2</p>
+                    <p class="box" id="3">3<br/><i>22 Snake</i></p>
                     <p class="box" id="4">4</p>
                     <p class="box" id="5">5</p>
                     <p class="box" id="6">6</p>
@@ -190,6 +190,9 @@
                     <p class="box" id="10">10</p>
                 </row>
             </div>
+
+            <!-- back -->
+
             <div class="container-2">
                 <!-- row 1 -->
                 <row>
